--- a/css/style.css
+++ b/css/style.css
@@ -402,7 +402,7 @@ a:hover {
 }
 
 .main {
-  background-image: url(../img/circle.png);
+  background-image: url(../../img/circle.png);
   background-repeat: no-repeat;
   background-position: top -15rem right -12rem;
   background-size: auto;
